# rdbms_finance_monorepo

./: .gitignore  Dockerfile  README.md  layout.md
docs/steps/: 00._start.md  02_parser.md  04_data_storage.md  05_constraints.md
finance_tracker/: requirements.txt
finance_tracker/app/: __init__.py  db_core.py  db_init.py  db_session.py  deps.py  main.py  security.py  settings.py  sql.py
finance_tracker/app/auth/: auth.py
finance_tracker/app/repos/: categories_repo.py  transactions_repo.py  users_repo.py
finance_tracker/app/routes/: __init__.py  auth.py  categories.py  dashboard.py  pages.py  transactions.py
finance_tracker/app/services/: dashboard_service.py
finance_tracker/app/templates/: base.html  categories.html  dashboard.html  login.html  register.html  transaction_edit.html  transaction_new.html  transactions.html
finance_tracker/db/: catalog.json
finance_tracker/db/data/: categories.jsonl  transactions.dir.json  transactions.jsonl  transactions.meta.json  users.jsonl
finance_tracker/db/indexes/: idx_categories_user.json  idx_tx_category.json  idx_tx_user.json  idx_tx_ym.json  (+2 more)
simple_rdbms/: layout.md  pyproject.toml
simple_rdbms/docs/steps/: 01_tokenizer.md  03_catalog.md  06_update_delete.md
simple_rdbms/simpledb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
simple_rdbms/tests/: test_catalog.py  test_lexer.py
simpledb/: __init__.py  ast.py  catalog.py  db.py  errors.py  lexer.py  parser.py  results.py
simpledb/exec/: executor.py
simpledb/storage/: heap.py
tests/: parser.py  tests_storage.py
